k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: greensky
  labels:
    app.kubernetes.io/part-of: greensky
