k8s/cobol-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greensky-cobol
  namespace: greensky
  labels:
    app: greensky-cobol
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greensky-cobol
  template:
    metadata:
      labels:
        app: greensky-cobol
    spec:
      containers:
        - name: cobol-publisher
          image: registry2.palmtech.com.au/greensky-cobol:latest
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
