k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: greensky-web
  namespace: greensky
  labels:
    app: greensky-web
spec:
  type: ClusterIP
  selector:
    app: greensky-web
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: greensky-cobol
  namespace: greensky
  labels:
    app: greensky-cobol
spec:
  type: ClusterIP
  selector:
    app: greensky-cobol
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: greensky
spec:
  type: ExternalName
  externalName: mosquitto.barleycorn.svc.cluster.local
  ports:
    - port: 9001
      targetPort: 9001
      protocol: TCP
